<resources>
    <string name="app_name">Advogado Responde</string>
    <string name="glad_you_back">Que bom que você voltou</string>
    <string name="continu">Continuar</string>
    <string name="fill_email">Preencha seu Email</string>
    <string name="add_valid_email">Insira um E-mail válido</string>
    <string name="revocer_pass_msg">Enviamos um email para você recuperar sua senha do aplicativo. Caso nao ache o email enviado em sua caixa de mensagem procure na caixa de Spam</string>
    <string name="fill_password">Preencha sua senha</string>
    <string name="welcome_back">Bem vindo de volta</string>
    <string name="signin_to_continue">Faça o login para continuar</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="login">Entrar</string>
    <string name="create_acc">Crie sua conta agora mesmo</string>
    <string name="have_acc">Você já tem uma conta?</string>
    <string name="police_privacy_msg">Ao se cadastrar você concorda com nossa politica de privacidade, clique aqui para acessar</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="register">Cadastrar</string>
    <string name="password_longer">Sua senha deve ter mais de 6 caracteres</string>
    <string name="password_not_equals">Senhas não são iguais</string>
    <string name="welcome_signup">Estamos felizes por você estar se juntando à nossa equipe, aproveite ao máximo nosso aplicativo!</string>
    <string name="email_already_been_used">Este E-mail já está sendo usado</string>
    <string name="email_confirmation">Confirmação de Email</string>
    <string name="email_sended">E-mail enviado com sucesso!</string>
    <string name="logout">Sair</string>
    <string name="logout_msg">Deseja realmente sair do aplicativo?</string>
    <string name="cancel">Cancelar</string>
    <string name="main_menu">Menu Principal</string>
    <string name="privacy_police">Política de Privacidade</string>
    <string name="join_our_team">Junte-se ao nosso time</string>
    <string name="signup_to_continue">Cadastre-se para continuar</string>
    <string name="hi">Oi,</string>
    <string name="what_your_name">Qual é o seu nome</string>
    <string name="interrogation">\?</string>
    <string name="exclamation">!</string>
    <string name="name_msg">É necessário que você informe seu nome verdadeiro. Não utilize nome de terceiros.</string>
    <string name="name">Nome</string>
    <string name="LastName">Sobrenome</string>
    <string name="fill_name">Digite seu nome</string>
    <string name="fill_last_name">Digite seu sobrenome</string>
    <string name="on_create_acc">Ao criar sua conta, você concorda com os</string>
    <string name="and">e</string>
    <string name="terms_services">Termos de Serviço</string>
    <string name="loading">Carregando …</string>
    <string name="valid_acc">Validação de Conta</string>
    <string name="resend_check">Reenviar ou Checar</string>
    <string name="valid_email_msg">Enviamos um link de confirmação para seu email Por favor, confirme seu email.\nCaso o email de confirmação não esteja na caixa de entrada, procura nos spans.</string>
    <string name="email_registered">Email Cadastrado:</string>
    <string name="what_you_are">, O que você é?</string>
    <string name="type_msg">Precisamos saber que tipo de pessoa você é para podermos dar seguimento com o seu cadastro.</string>
    <string name="im_client">Sou um Usuário</string>
    <string name="im_lawyer">Sou um Advogado</string>
    <string name="my_email_incorrect">Meu email esta incorreto</string>
    <string name="update">Atualizar</string>
    <string name="incorrect_email_msg">Você tem certeza que seu Email está incorreto? Se sim, clique em ATUALIZAR para você inserir um novo Email.</string>
    <string name="enter_oab_code">Informe o codigo de seu OAB</string>
    <string name="oab_code_msg">Caro usuário, para você atuar como um legitimo advogado precisamos que nos informe o código de seu OAB. Se o seu código for autenticado por nos em alguns dias você recebera o selo de verificado que aparecera para os usuários.</string>
    <string name="oab_code">Código OAB</string>
    <string name="select_uf_oab">Selecione a UF de seu OAB</string>
    <string name="enter_oab">Digite seu OAB</string>
    <string name="how_about_a_picture">Que tal uma foto?</string>
    <string name="how_about_msg">Escolha uma imagem de sua galeria ou tire uma foto pela sua câmera para que os outros usuários possam saber quem você é.</string>
    <string name="accept_permission">Por favor, aceite as permissões para escolher sua imagem</string>
    <string name="soon">Em Breve!</string>
    <string name="chose_image_continue">Escolha uma imagem para continuar</string>
    <string name="about_description">O aplicativo advogado responde tem como objetivo conectar pessoas com problemas a advogados especializados na área, com intuito de buscar uma solução.</string>
    <string name="contact">Contato</string>
    <string name="conect_with_us">Conecte-se Conosco</string>
    <string name="version">Versão</string>
    <string name="developed">Desenvolvimento</string>
    <string name="about">Sobre</string>
    <string name="profile">Perfil</string>
    <string name="verified">Verificado</string>
    <string name="not_verified">Não Verificado</string>
    <string name="profile_pic_updated">Foto de perfil atualizada com sucesso!</string>
    <string name="answered_questions">Perguntas Respondidas</string>
    <string name="cases_taken">Casos Realizados</string>
    <string name="talk_whats">Fale com nós pelo WhatsApp</string>
    <string name="sign_up_lawyer_crecits">Você está recebendo 70CA (Creditos do aplicativo), por se cadastrar em nosso beta.</string>
    <string name="phone_msg">Este número deve ser o de seu WhatsApp</string>
    <string name="change_phone">Clique aqui para alterar seu telefone.</string>
    <string name="save">Salvar</string>
    <string name="example_phone">Ex: 51999990000</string>
    <string name="phone_updated">Seu número foi atualizado com sucesso!</string>
    <string name="incomplet_phone">Seu numero esta incompleto</string>
    <string name="fill_phone">Você precisa digitar seu numero</string>
    <string name="oab" translatable="false">OAB</string>
    <string name="phone">Telefone</string>
    <string name="name_lastname">Nome e Sobrenome</string>
    <string name="update_name_last_name">Atualize seu nome e sobrenome</string>
    <string name="name_updated_success">Nome e sobrenome atualizados com sucesso!</string>
    <string name="oab_verified">Seu código oab foi verificado pelos administradores, não é mais possivel muda-lo</string>
    <string name="edit_oad_msg">Atualize o seu codigo da oab e o uf do código\nApós os administradores verificarem seu codigo nãos era possivel altera-lo</string>
    <string name="oab_updated">Seu codigo OAB foi atualizado com sucesso!</string>
    <string name="profile_msg">Veja e Altere seus dados</string>
    <string name="new_case">Novo Caso</string>
    <string name="new_case_msg">Adicione um novo caso</string>
    <string name="tell_about_case">Conte sobre seu caso</string>
    <string name="occupation_Area">Área de Atuação</string>
    <string name="your_cases">Seus Casos</string>
    <string name="your_cases_msg">Acompanhe seus casos</string>
    <string name="chat_msg">Bate-papo com advogados</string>
    <string name="chat">Bate-Papo</string>
    <string name="occupation_area_msg">Selecione a área de atuação, que mais se encaixe no seu caso. Isso ajudará os advogados a entenderem melgor o seu caso.</string>
    <string name="msg_occupation">Ao clicar em continuar você estará concordando que ao criar um novo caso, você ficará responsável por tudo que você irá escrever e ira compartilhar com os advogados.</string>
    <string name="chose_area">Escolha uma área</string>
    <string name="select_occupation_area">Selecione uma Área de Atuação</string>
    <string name="upload_msg">Caso você tenha algum arquivo pdf ou foto que possa ajuda os advogados a entender melhor o seu caso, faça o upload clicando nos botões abaixo, caso não tenha clique em continuar</string>
    <string name="image">Imagem</string>
    <string name="pdf" translatable="false">PDF</string>
    <string name="upload_file">Upload De Arquivo</string>
    <string name="no_files">Sem arquivos</string>
    <string name="no_file_msg">Você não escolheu nenhum arquivo, deseja continuar?</string>
    <string name="case_description">Descrição do Caso</string>
    <string name="case_description_msg">Faça uma descrição completa de seu caso para que os advogados possam ter um bom entendimento de seu caso e que possam ajudar a resolver o seu problema.</string>
    <string name="complete">Concluir</string>
    <string name="description_msg">Ao clicar em completar, você confirma que todos os dados do tipo pdf, imagem e texto são veridicos.</string>
    <string name="fill_description">Por favor, escreva uma descrição do seu caso</string>
    <string name="lenght_description">Sua descrição precisa ter mais de 30 caracteres</string>
    <string name="case_done_msg">Seu caso foi salvo com sucesso, em breve um advogado ira lhe responder para tirar suas duvidas!</string>
    <string name="click_to_see_more">%s … CLIQUE PARA LER MAIS</string>
    <string name="find_cases">Procurar Casos</string>
    <string name="find_cases_msg">Encontre casos de usuários</string>
    <string name="no_verified_acc">Você só poderá ver os casos dos usuários após sua conta for verificada pelos administradores. Aguarde alguns minutos e tente novamente</string>
    <string name="imagem">Imagem</string>
    <string name="user">Usuário</string>
    <string name="details">Detalhes</string>
    <string name="lawyers_case">Advogados Neste Caso</string>
    <string name="user_case">Caso do Usuário</string>
    <string name="click_to_view">Cliquei aqui para visualizar</string>
    <string name="no_file">Sem Arquivo</string>
    <string name="get_case">Pegar este caso</string>
    <string name="get_case_msg">Você ira gastar 30CA para pegar este caso!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="insufficient_ca">CA insuficiente para pegar este caso, por favor, recarregue seus CA e tente novamente</string>
    <string name="report">Reportar este caso</string>
    <string name="limit_lawyer">Este caso já chegou no limite de Advogados!</string>
    <string name="no_comments">Você não tem nenhum comentário neste caso ainda</string>
    <string name="new_comment">Novo Comentário</string>
    <string name="comment">Comentar</string>
    <string name="fill_comment">Para comentar você precisa digitar algo</string>
    <string name="comment_success">Comentário enviado com sucesso!</string>
    <string name="description">Descrição</string>
    <string name="whats_dialog">Ao clicar em continuar o aplicativo WhatsApp será aberto para que você possa conversar com o usuario dono deste caso</string>
    <string name="number">Número</string>
    <string name="update_phone_msg">Você precisa atualizar o seu numero de telefone no seu perfil para poder cadastrar um novo caso</string>
    <string name="free_link">Link liberado apos você pegar este caso</string>
    <string name="type_to_send">Digite algo para enviar</string>
    <string name="fail_sent_message">Erro ao enviar a mensagem, tente novamente!</string>
    <string name="error_save_chat">Erro ao salvar o bate-papo</string>
    <string name="chat_lawyer_msg">Veja suas conversas com usuários</string>
    <string name="manage_credit_msg">Gerencie seus créditos</string>
    <string name="ca" translatable="false">CA</string>
    <string name="credits">Créditos</string>
    <string name="no_message">Você ainda não tem mensagens com esta pessoa</string>
    <string name="no_chat">Você não tem conversas ainda</string>
</resources>